# neural

./: .gitattributes  .gitignore  .gitmodules  Dockerfile  LICENSE.md  README.md  build.lua  install-python-env.sh  pyproject.toml  pyrightconfig.json  run-tests  test-requirements.txt  to-do  tox.ini
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
.github/workflows/: main.yml
autoload/: neural.vim
autoload/neural/: buffer.vim  config.vim  count.vim  datasource.vim  explain.vim  handler.vim  job.vim  preview.vim  redact.vim  utils.vim  visual.vim
autoload/neural/datasource/: openai.vim
autoload/neural/pre_process/: cmake.vim  cpp.vim  css.vim  go.vim  json.vim  lua.vim  markdown.vim  python.vim  sh.vim  sql.vim  vim.vim
autoload/neural/provider/: openai.vim
autoload/neural/source/: anthropic.vim  chatgpt.vim  openai.vim
doc/: neural-development.txt  neural.txt
ftplugin/: neuralbuf.vim
lua/: .lua-format  .luacheckrc  neural.lua
lua/neural/: config.lua  notify.lua  openai.lua  request.lua  ui.lua  utils.lua
neural_datasources/: install-env.sh  openai.py  openai.vim
neural_providers/: anthropic.py  chatgpt.py  openai.py
neural_sources/: chatgpt.py  openai.py
plugin/: neural.vim
plugin/ftplugin/: neuralbuf.vim
python3/: utils.py
src/neural/provider/: openai.py
test/: smoke_test.vader
test/python/: test_anthropic.py  test_chatgpt.py  test_openai.py
test/python/provider/: test_openai.py
test/script/: block-padding-checker  check-tag-references  check-toc  custom-checks  custom-linting-rules  run-custom-checks  run-python  run-vader-tests  run-vint
test/vim/: smoke_test.vader  test_anthropic.vader  test_buffer.vader  test_config.vader  test_explain.vader  test_jobs.vader  test_neural.vader  test_openai.vader  test_preview.vader  test_redactions.vader  test_view_prompt.vader  vimrc
test/vim/pre_process/: test_cmake.vader  test_cpp.vader  test_css.vader  test_disable_pre_process.vader  test_go.vader  test_lua.vader  test_markdown.vader  test_python.vader  test_sh.vader  test_vim.vader
